Skill-Test-Cloud-Containers/Microservices/submission/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /api/users/(.*)
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3000
      - path: /api/products/(.*)
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 3001
      - path: /api/orders/(.*)
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 3002
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 3003
